--- a/style.css
+++ b/style.css
@@ -2,228 +2,45 @@
     box-sizing: border-box;
 }
 
-/*general styles*/
+/*colors and typography*/
 
 body {
-    margin: 0;
-    font-family: 'Monserrat', sans-serif;
-    font-size: 1.25rem;
-    line-height: 1.6;
+    line-height: 1.16;
+    font-family: 'Montserrat', sans-serif;
 }
 
-img {
-    max-width: 100%;
-}
-
-ul {
-    list-style: none;
+.header {
+    background-color: #2E323F;
+    color: white;
+    font-family: 'Oswald', sans-serif;
 }
 
 li {
-    padding: .5em;
-}
-
-button {
-    border-radius: 25px;
-
-    text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    background-color: #A59678;
-    border-style: none;
-    padding: .5em 1.25em;
-}
-
-.nav {
-    width: 100%;
-}
-
-.nav-toggle {
-    cursor: pointer;
-    border: 0;
-    width: 3em;
-    height: 3em;
-    padding: 0em;
-    margin-left: 1em;
-    border-radius: 50%;
-    color: white;
-    background-color:#A59678;
-    transition: opacity 250ms ease;
-
-    position: absolute;
-    left: 0;
-}
-
-.nav-toggle:focus,
-.nav-toggle:hover {
-    opacity: .75;
-}
-
-.hamburger {
-    width: 50%;
-    position: relative;
-}
-
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-    display:block;
-    margin: 0 auto;
-    height: 3px;
-    background: white;
-}
-
-.hamburger::before,
-.hamburger::after {
-    content:'';
-    width: 100%;
-}
-
-.hamburger::before {
-    transform: translateY(-6px);
-}
-
-.hamburger::after {
-    transform: translateY(3px);
-}
-
-.nav {
-    visibility: hidden;
-    height: 0;
-    position: absolute;
-    font-size: 1rem;
-}
-
-.nav--visible {
-    visibility: visible;
-    height: auto;
-    position: relative;
-} 
-
-.nav-list {
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
-.nav-list-primary {
-    margin-bottom: 2em;
-}
-
-.nav-item {
-    margin-top: .75em;
-}
-
-.nav-link {
+a {
     color: white;
-    text-transform: uppercase;
     text-decoration: none;
 }
-
-.nav-link-button {
-    color:white;
-    background-color: #A59678;
-    padding: .25em .75em;
-    border-radius: 100px;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-    opacity: .65;
-}
-
-.logo {
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.sidebar .heading {
-    font-size: 1.4rem;
-    font-family: 'Oswald', sans-serif;
-}
-
-.subsection {
-    font-size: 1.25rem;
-}
-
-/*header*/
-
-.main-section {
-    padding: 1.25em 0;
-    color: white;
-    background-color: #2E323f;
-}
-
-/*hero*/
 
 .hero {
     background-color: #3B4050;
     color: white;
 }
 
-span {
-    color:#A59678;
+button {
+    background-color: #A59678;
+    color: white;
+    text-transform: uppercase;
+    font-family:'Oswald', sans-serif;
 }
-
-h1 {
-    font-size: 4em;
-}
-
-.hero p {
-    font-size: 1.5em;
-}
-
-/*section-two*/
 
 .section-two {
-    background-color: #f2eee3;
-    text-align: center;
-    padding: 2em;
+    background-color: #F4EBE2;
 }
 
-.section-two-heading {
-    color:#A59678;
-}
-
-.subsection-2 {
-    padding: .25em 0;
-}
-
-/*section-three*/
-
-.section-three {
-    padding: 1em 2em;
-}
-
-.section-three-heading {
-    color:#A59678;
-}
-
-.subsection-3 {
-    background-color: #2E323f;
-    text-align: center;
+.footer {
+    background: #3B4050;
     color: white;
-
-    padding: 2em;
-    margin: 2em;
-}
-
-/*footer*/
-
-.footer-section {
-    background-color: #3B4050;
-    color: white;
-    padding: 3em 0;
-    text-align: center;
-}
-
-.heading {
-    font-family: 'Oswald', sans-serif;
-}
-
-.footer-subheading {
-    color: #A59678;
-
 }
